package com.behavioral.visitor.exercise3;

public interface Visitor {

    void visit(Bank bank);

    void visit(Restaurant restaurant);
}
